# smooth

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
cmake/: internal_utils.cmake
include/: polyinterp.h  smooth.h
src/: polyinterp.c
tests/: eigentests.cpp  polyinterptests.cpp  quicksorttests.cpp
